fixes issue where employer divs aren't alligned on mobile view

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -83,6 +83,7 @@ a:hover {
   display: inline-block;
   width: 45%;
   margin: 2%;
+  vertical-align: top;
 }
 
 .employer_image {
